# slip

./: .gitignore  Makefile  README  slip.cabal
lib/Slip/: Conversion.hs  Core.hs  Interpreter.hs  SExpression.hs
repl/: Repl.hs
spec/Slip/: InterpreterSpec.hs  SExpressionSpec.hs
