name:                slip
version:             0.1.0.0
author:              kyren
maintainer:          kerriganw@gmail.com
build-type:          Simple
License:             PublicDomain
cabal-version:       >= 1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Slip.Conversion, Slip.Core, Slip.Interpreter, Slip.SExpression
  build-depends:       base, containers, mtl, parsec, hashtables
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2

executable repl
  hs-source-dirs:      repl
  main-is:             Repl.hs
  build-depends:       base, slip
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  other-modules:       Slip.InterpreterSpec, Slip.SExpressionSpec
  build-depends:       base, slip, hspec
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2
